# FoglioDiCalcolo

./: CMakeLists.txt
include/: Cell.h  Function.h  GridInterface.h  Observer.h  Subject.h
src/: Cell.cpp  Function.cpp  GridInterface.cpp  Observer.cpp  Subject.cpp  main.cpp
test/: CMakeLists.txt  test_cell.cpp  test_function.cpp  test_main.cpp
